<?xml version="1.0"?>
<package format="2">
  <name>ape_app</name>
  <version>1.0.0</version>
  <description>Launch and configuration files for APE AGV</description>

  <author email="sam.chen@apetech.com">Sam Chen</author>
  <maintainer email="sam.chen@apetech.com">Sam Chen</maintainer>


  <license>BSD</license>
 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

</package>