<package format="2">
    <name>charge_localization_and_move</name>
    <version>1.0.0</version>
    <description>charge navigation</description>
    <author>Sam Chen</author>
    <maintainer email="sam.chen@apetech.com">Sam Chen!!</maintainer>
    <license>LGPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_filters</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>

    <depend>dynamic_reconfigure</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>rosbag</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_srvs</depend>
    <depend>tf2</depend>
    <depend>tf2_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>message_runtime</depend>
    <depend>actionlib</depend>
    <depend>actionlib_msgs</depend>

   
    
</package>
