<?xml version="1.0"?>
<package format="2">
  <name>ape_actions</name>
  <version>1.0.0</version>
  <description>Action definitions for the APE AGV</description>

  <author email="sam.chen@apetech.com">Sam Chen</author>
  <maintainer email="sam.chen@apetech.com">Sam Chen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>