<package format="2">
    <name>ape_charge</name>
    <version>1.0.0</version>
    <description>charge docking navigation</description>
    <author>Sam Chen</author>
    <maintainer email="sam.chen@apetech.com">Sam Chen!!</maintainer>
    <license>LGPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>message_filters</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>actionlib</depend>
    <depend>actionlib_msgs</depend>

   
    
</package>
